updated models and beans
