# app/contexts/order/api/Order.java
@@ -1,13 +1,16 @@
 package contexts.order.api;
 
 import java.util.List;
+import java.util.UUID;
 
 public class Order {
 
+    private UUID id;
     private final ShippingInfo shippingInfo;
     private final List<OrderedItem> items;
 
-    public Order(ShippingInfo shippingInfo, List<OrderedItem> items) {
+    public Order(UUID id, ShippingInfo shippingInfo, List<OrderedItem> items) {
+        this.id = id;
         this.shippingInfo = shippingInfo;
         this.items = items;
     }
@@ -15,4 +18,6 @@ public class Order {
     public ShippingInfo getShippingInfo() { return shippingInfo; }
 
     public List<OrderedItem> getItems() { return items; }
+
+    public UUID getId() { return id; }
 }
