# app/contexts/order/api/OrderedItem.java
@@ -1,17 +1,32 @@
 package contexts.order.api;
 
-public class OrderedItem {
-    private String productId;
-    private Integer quantity;
+import java.util.UUID;
 
-    public OrderedItem(String productId, Integer quantity) {
+public class OrderedItem {
+    private UUID productId;
+    private Integer quantity;
+    private Double subtotal;
+    private Double tax;
+    private Double total;
+
+    public OrderedItem(UUID productId, Integer quantity, Double subtotal, Double tax, Double total) {
         this.productId = productId;
         this.quantity = quantity;
+        this.subtotal = subtotal;
+        this.tax = tax;
+        this.total = total;
     }
 
     public OrderedItem() { }
 
-    public String getProductId() { return productId; }
+    public UUID getProductId() { return productId; }
 
     public Integer getQuantity() { return quantity; }
+
+    public Double getSubtotal() { return subtotal; }
+
+    public Double getTax() { return tax; }
+
+    public Double getTotal() { return total; }
+
 }
