# app/contexts/order/db/models/OrderBean.java
@@ -7,6 +7,7 @@ import contexts.order.api.ShippingInfo;
 import play.data.validation.*;
 
 import java.util.List;
+import java.util.UUID;
 
 @Entity
 public class OrderBean extends com.avaje.ebean.Model {
@@ -14,13 +15,13 @@ public class OrderBean extends com.avaje.ebean.Model {
     private static final long serialVersionUID = 1L;
 
     @Id
-    public Long id;
+    public UUID id;
 
-    @Constraints.Required
-    public ShippingInfo shippingInfo;
+    //@Constraints.Required
+    //public ShippingInfo shippingInfo;
 
-    @Constraints.Required
-    public List<OrderedItem> items;
+    //@ManyToMany(cascade=CascadeType.ALL)
+    //public List<OrderedItem> items;
 
     public static Find<Long,OrderBean> find = new Find<Long,OrderBean>(){};
 
